--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,11 +1,11 @@
-# Introduction
- 
-Welcome to Nextra! This is a basic docs template. You can use it as a starting point for your own project :)
+# Loot Survivor
 
-## What is Nextra?
+A roguelike, survival fully onchain game built on Starknet built by Bibliotheca DAO.
 
-A **simple**, **powerful** and **flexible** site generation framework with everything you love from Next.js.
+## What is Loot Survivor?
 
-## Documentation
+Loot Survivor is an onchain arcade machine, you put a small amount of $LORDS, you play and you try to top the leaderboard.
 
-The documentation is available at [https://nextra.site](https://nextra.site).
+## Play Loot Survivor
+
+<a href="https://survivor.realms.world/">![Loot Survivor](/beast.png)</a>
