--- a/pages/about.mdx
+++ b/pages/about.mdx
@@ -1,3 +1,3 @@
 # About
 
-This is the about page! This page is shown on the navbar.
+Loot Survivor is an open-source fully onchain game built by Bibliotheca DAO on Starknet. It references the original Loot contract written by Dom Hoffman and propels the Loot Lore into an addictive survival game. Want to contribute? Visit the Github and check out latest issues. Have a question? Reach out on Discord or Twitter.
