--- a/pages/beasts/beasts.mdx
+++ b/pages/beasts/beasts.mdx
@@ -2,7 +2,7 @@
 
 - There are 75 beasts in Loot Survivor.
 - Beasts attack the Head, Chest, Hands, Waist and Feet.
-- Beast have dynamic health and attack location.
+- Beast have dynamic health and attack locations.
 - Greatness 20 beasts unlock special name prefixes.
 
 ## Base Damage Calculation
@@ -10,7 +10,7 @@
 Beast base attack and armor of an item is:
 `Greatness \* (6 - Tier)`
 
-## Beast Attack Types
+### Beast Attack Types
 
 | Beast     | Weapon   | Armor |
 | --------- | -------- | ----- |
