welcome page edits

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,10 +1,12 @@
 # Loot Survivor
 
-A roguelike, survival fully onchain game built on Starknet built by Bibliotheca DAO.
+A roguelike, survival fully onchain game built on Starknet.
+
+Built by Bibliotheca DAO contributors and [@LootRealms](https://twitter.com/LootRealms)community.
 
 ## What is Loot Survivor?
 
-Loot Survivor is an onchain arcade machine, you put a small amount of $LORDS, you play and you try to top the leaderboard.
+Loot Survivor is an onchain arcade machine, you put in a small amount of $LORDS, play and try to top the immutable leaderboard.
 
 ## Play Loot Survivor
 
