- add suffix list - copy edits

--- a/pages/beasts/beasts.mdx
+++ b/pages/beasts/beasts.mdx
@@ -3,12 +3,12 @@
 - There are 75 beasts in Loot Survivor.
 - Beasts attack the Head, Chest, Hands, Waist and Feet.
 - Beast have dynamic health and attack locations.
-- Greatness 20 beasts unlock special name prefixes.
+- Greatness 19+ beasts unlock special name prefixes.
 
 ## Base Damage Calculation
 
-Beast base attack and armor of an item is:
-`Greatness \* (6 - Tier)`
+Beast base attack damage is:
+`Greatness * (6 - Tier)`
 
 ### Beast Attack Types
 
