--- a/pages/items/Jewelry/jewelrylist.mdx
+++ b/pages/items/Jewelry/jewelrylist.mdx
@@ -1,6 +1,6 @@
 # Jewelry Items
 
-Jewelry items can be used to increase Luck and unlock special abilities. Luck gives an increased chance of achieving critical hits. Jewelry items will contribute to Luck even when bagged. Maximum Luck is 40.
+Jewelry items can be used to increase Luck and unlock special abilities. Luck gives an increased chance of achieving critical hits. Jewelry items will contribute to Luck even when bagged.
 
 | Item          | Boost                                                                                                                                        |
 | ------------- | -------------------------------------------------------------------------------------------------------------------------------------------- |
