--- a/pages/start/arcadeaccounts.mdx
+++ b/pages/start/arcadeaccounts.mdx
@@ -1,8 +1,8 @@
 # Arcade Accounts
 
-Arcade Accounts are "burner" accounts that can only interact with the permissions.
+Arcade Accounts are "burner" accounts that can interacts, with certain permissions, in a contracts.
 
-The permissions given to the arcade account can only do limited actions for security, these include interacting with the game functions and transfers to a "master" account.
-The "master" account is the account that create the Arcade Account (AA). It works by storing the keys in the browser.
+The permissions given to the arcade account can only do limited actions for security, these include, interacting with the game functions (attack, flee, explore etc.) and transfers to a "master" account.
+The "master" account is the account that created the Arcade Account (AA). It works by using native storing the keys in the browser.
 
 Arcade Accounts are **free** to create however it will initiate a transfer of 0.001 ETH from your connected wallet to the AA to cover your transaction costs (gas) from normal gameplay.
