--- a/pages/start/start.mdx
+++ b/pages/start/start.mdx
@@ -1,9 +1,9 @@
 # Getting Started
 
-New to Loot Survivor? Here is how you can play:
+New to Loot Survivor? Here's how you can play:
 
-1. Create a Starknet Wallet. Download [ArgentX](https://www.argent.xyz/argent-x/) or [Braavos](https://braavos.app/).
+1. Get a Starknet Wallet. Download [ArgentX](https://www.argent.xyz/argent-x/) or [Braavos](https://braavos.app/).
 2. Go to [Loot Survivor](https://survivor.realms.world/)
-3. Connect your wallet
+3. Connect your wallet and play!
 
-You can now create an Arcade Account for signature free gameplay. Learn more about [Arcade Accounts](/arcadeaccounts).
+Create an Arcade Account for signature free gameplay. Learn more about [Arcade Accounts](/arcadeaccounts).
