--- a/pages/stats/statslist.mdx
+++ b/pages/stats/statslist.mdx
@@ -1,6 +1,6 @@
-# Stats
+# Stat Boosts
 
-Each level up grants adventurers a +1 stat boost to help them survive their explorations. While you cannot directly upgrade Luck, you can increase it by equipping jewelry items.
+Each level up grants adventurers a +1 stat boost to help them survive their explorations. Whilst you cannot upgrade Luck you can increase it by equipping jewelry items.
 
 | Attribute    | Type            | Description                                                       |
 | ------------ | --------------- | ----------------------------------------------------------------- |
