--- a/pages/stats/suffixlist.mdx
+++ b/pages/stats/suffixlist.mdx
@@ -4,21 +4,21 @@ When an item reaches Greatness 15 it earns a suffix boost that provides an addit
 
 In addition to the +3 stat boost at G15, the adventurer will also receive +1 when the item reaches Greatness 19+.
 
-| Item Suffix      | Attribute                                 | Description                                                        |
-| ---------------- | ----------------------------------------- | ------------------------------------------------------------------ |
-| Of Power         | Strength +3                               | Increases the adventurer's strength by 3 points.                   |
-| Of Giant         | Vitality +3                               | Increases the adventurer's vitality by 3 points.                   |
-| Of Titans        | Strength +2, Charisma +1                  | Increases the adventurer's strength by 2 and charisma by 1 point.  |
-| Of Skill         | Dexterity +3                              | Increases the adventurer's dexterity by 3 points.                  |
-| Of Perfection    | Strength +1, Dexterity +1, Vitality +1    | Increases each of the adventurer's attributes by 1 point.          |
-| Of Brilliance    | Intelligence +3                           | Increases the adventurer's intelligence by 3 points.               |
-| Of Enlightenment | Wisdom +3                                 | Increases the adventurer's wisdom by 3 points.                     |
-| Of Protection    | Vitality +2, Dexterity +1                 | Increases the adventurer's vitality by 2 and dexterity by 1 point. |
-| Of Anger         | Strength +2, Dexterity +1                 | Increases the adventurer's strength by 2 and dexterity by 1 point. |
-| Of Rage          | Wisdom +1, Strength +1, Charisma +1       | Increases each of the adventurer's attributes by 1 point.          |
-| Of Fury          | Vitality +1, Charisma +1, Intelligence +1 | Increases each of the adventurer's attributes by 1 point.          |
-| Of Vitriol       | Intelligence +2, Wisdom +1                | Increases the adventurer's intelligence by 2 and wisdom by 1 point |
-| Of the Fox       | Dexterity +2, Charisma +1                 | Increases the adventurer's dexterity by 2 and charisma by 1 point. |
-| Of Detection     | Wisdom +2, Dexterity +1                   | Increases the adventurer's wisdom by 2 and dexterity by 1 point.   |
-| Of Reflection    | Wisdom +2, Intelligence +1                | Increases the adventurer's wisdom by 2 and intelligence by 1 point |
-| Of the Twins     | Charisma +3                               | Increases the adventurer's charisma by 3 points.                   |
+| Item Suffix      | Attribute                               | Description                                                        |
+| ---------------- | --------------------------------------- | ------------------------------------------------------------------ |
+| Of Power         | Strength +3                             | Increases the adventurer's strength by 3 points.                   |
+| Of Giant         | Vitality +3                             | Increases the adventurer's vitality by 3 points.                   |
+| Of Titans        | Strength +2, Charisma +1                | Increases the adventurer's strength by 2 and charisma by 1 point.  |
+| Of Skill         | Dexterity +3                            | Increases the adventurer's dexterity by 3 points.                  |
+| Of Perfection    | Strength +1 Dexterity +1 Vitality +1    | Increases each of the adventurer's attributes by 1 point.          |
+| Of Brilliance    | Intelligence +3                         | Increases the adventurer's intelligence by 3 points.               |
+| Of Enlightenment | Wisdom +3                               | Increases the adventurer's wisdom by 3 points.                     |
+| Of Protection    | Vitality +2 Dexterity +1                | Increases the adventurer's vitality by 2 and dexterity by 1 point. |
+| Of Anger         | Strength +2 Dexterity +1                | Increases the adventurer's strength by 2 and dexterity by 1 point. |
+| Of Rage          | Wisdom +1 Strength +1 Charisma +1       | Increases each of the adventurer's attributes by 1 point.          |
+| Of Fury          | Vitality +1 Charisma +1 Intelligence +1 | Increases each of the adventurer's attributes by 1 point.          |
+| Of Vitriol       | Intelligence +2 Wisdom +1               | Increases the adventurer's intelligence by 2 and wisdom by 1 point |
+| Of the Fox       | Dexterity +2 Charisma +1                | Increases the adventurer's dexterity by 2 and charisma by 1 point. |
+| Of Detection     | Wisdom +2 Dexterity +1                  | Increases the adventurer's wisdom by 2 and dexterity by 1 point.   |
+| Of Reflection    | Wisdom +2 Intelligence +1               | Increases the adventurer's wisdom by 2 and intelligence by 1 point |
+| Of the Twins     | Charisma +3                             | Increases the adventurer's charisma by 3 points.                   |
