styles and copy edits

--- a/pages/beasts/beasts.mdx
+++ b/pages/beasts/beasts.mdx
@@ -1,16 +1,26 @@
 # Beasts
 
-- There are 75 beasts in Loot Survivor.
-- Beasts attack the Head, Chest, Hands, Waist and Feet.
-- Beast have dynamic health and attack locations.
-- Greatness 19+ beasts unlock special name prefixes.
+When exploring you may get ambushed by a beast!
+
+💀 There are 75 beasts in Loot Survivor
+
+💀 Beasts attack the Head, Chest, Hands, Waist and Feet
+
+💀 Beast have dynamic health and attack locations
+
+💀 Greatness 19+ beasts unlock special name prefixes
+
+**Tip:**
+Upgrade Wisdom to avoid ambushes
 
 ## Base Damage Calculation
 
 Beast base attack damage is:
 `Greatness * (6 - Tier)`
 
-### Beast Attack Types
+### Beast Attack
+
+There are 3 Beast types; Magical, Hunter and Brute. Each with their suited weapon and armor.
 
 | Beast     | Weapon   | Armor |
 | --------- | -------- | ----- |
