--- a/pages/items/Armor/clotharmor.mdx
+++ b/pages/items/Armor/clotharmor.mdx
@@ -1,6 +1,6 @@
 # Cloth Armor
 
-Bludgeon is weak and Blade is strong against this armor.
+> Bludgeon is weak and Blade is strong against this armor.
 
 | Item Name       | Tier |
 | --------------- | ---- |
