--- a/pages/items/Armor/hidearmor.mdx
+++ b/pages/items/Armor/hidearmor.mdx
@@ -1,6 +1,6 @@
 # Hide Armor
 
-Magic is weak and Bludgeon is strong against this armor.
+> Magic is weak and Bludgeon is strong against this armor.
 
 | Item Name              | Tier |
 | ---------------------- | ---- |
