--- a/pages/items/Armor/metalarmor.mdx
+++ b/pages/items/Armor/metalarmor.mdx
@@ -1,6 +1,6 @@
 # Metal Armor
 
-Blade is weak and Magic is strong against this armor.
+> Blade is weak and Magic is strong against this armor.
 
 | Item Name         | Tier |
 | ----------------- | ---- |
