--- a/pages/items/items.mdx
+++ b/pages/items/items.mdx
@@ -2,7 +2,7 @@
 
 There are **101** Loot Items for **Weapons** and **Armor** their efficacies are shown below. Tier 1 items offer the highest level of attack and defense.
 
-Weak/Fair/Strong gives 50%/100%/150% damage to certain Armor Type.
+> Weak/Fair/Strong gives 50%/100%/150% damage to certain Armor Type.
 
 | Weapon vs Armor | Metal  | Hide   | Cloth  |
 | --------------- | ------ | ------ | ------ |
