--- a/pages/stats/statslist.mdx
+++ b/pages/stats/statslist.mdx
@@ -11,3 +11,6 @@ Each level up grants adventurers a +1 stat boost to help them survive their expl
 | Wisdom       | 3D Mental       | Helps evade beast ambushes                                        |
 | Charisma     | 3D Mental       | Gives gold discount on items and health potions                   |
 | Luck         | 1D Metaphysical | Raises chances of critical damage and cannot be upgraded directly |
+
+> To calculate the odds of your stats simply do:
+> `Stat / Level`
