--- a/pages/stats/suffixlist.mdx
+++ b/pages/stats/suffixlist.mdx
@@ -1,6 +1,6 @@
 # Item Suffix Boosts
 
-When an item reaches Greatness 15 it earns a suffix boost that provides an additional +3 stat boost depending on the [16 Orders of Divinity](https://docs.loot.foundation/canonical-principles/loot/the-16-orders) given. The Order is randomly assigned but follows the cannoncial loot lore, you can read more about the Loot Foundation to gain a deeper understanding of [Loot Lore](https://docs.loot.foundation/).
+When an item reaches Greatness 15 it earns a suffix boost that provides an additional +3 stat boost depending on the [16 Orders of Divinity](https://docs.loot.foundation/canonical-principles/loot/the-16-orders) given. The Order is randomly assigned but follows the canonical loot lore, you can read more about the Loot Foundation to gain a deeper understanding of [Loot Lore](https://docs.loot.foundation/).
 
 In addition to the +3 stat boost at G15, the adventurer will also receive +1 when the item reaches Greatness 19+.
 
