--- a/pages/start/mainnet.mdx
+++ b/pages/start/mainnet.mdx
@@ -1,4 +1,4 @@
-# Getting Started
+# Getting Started On Mainnet
 
 New to Loot Survivor? Here's how you can play:
 
@@ -6,4 +6,4 @@ New to Loot Survivor? Here's how you can play:
 2. Go to [Loot Survivor](https://survivor.realms.world/)
 3. Connect your wallet, create an arcade account and play!
 
-Create an Arcade Account for signature free gameplay. Learn more about [arcade accounts](/arcadeaccounts).
+Create an Arcade Account for signature free gameplay. Learn more about [arcade accounts](/start/arcadeaccounts).
