- add images - arcade account updates

--- a/pages/start/arcadeaccounts.mdx
+++ b/pages/start/arcadeaccounts.mdx
@@ -1,8 +1,11 @@
 # Arcade Accounts
 
-Arcade Accounts are "burner" accounts that can interacts, with certain permissions, in a contracts.
+Arcade accounts allow signature free gameplay by creating a permissioned account that can only perform certain actions. It is created by your primary account and stores the keys in the browser.
 
-The permissions given to the arcade account can only do limited actions for security, these include, interacting with the game functions (attack, flee, explore etc.) and transfers to a "master" account.
-The "master" account is the account that created the Arcade Account (AA). It works by using native storing the keys in the browser.
+NOTE: IF YOU DELETE BROWSER COOKIES YOU WILL LOSE YOUR ARCADE ACCOUNT. YOU CAN WITHDRAW FUNDS TO YOUR MAIN ACCOUNT AT ANY TIME.
 
-Arcade Accounts are **free** to create however it will initiate a transfer of 0.001 ETH from your connected wallet to the AA to cover your transaction costs (gas) from normal gameplay.
+To recover your AA, go to the AA button, select recover account and input the arcade account address. Check you are connected to the primary account that created the AA.
+
+![Arcade Account Page](/arcadeaccount.png)
+
+Reach out if you have any issues on the Realms by BibliothecaDAO Discord, @LootRealms twitter or Github.
