--- a/pages/start/testnet.mdx
+++ b/pages/start/testnet.mdx
@@ -4,9 +4,9 @@
 
 - On testnet
 - Free to play
-- Bot protection removed: instant start.
-- Gas paid in goerli eth.
-- Not eligible for tournament prizes, LORDS rewards for top three places or collectible beasts.
+- Bot protection removed: instant start
+- Gas paid in goerli eth
+- Not eligible for tournament prizes, LORDS rewards for top three places or collectible beasts
 
 ___
 
@@ -31,5 +31,3 @@ Step 8: Choose your weapon and name your Adventurer
 Step 9: Press 'PLAY WITH LORDS TOKENS' (these are test LORDS)
 
 Step 6: Play
-
-Step 7: Die
