--- a/pages/start/mainnet.mdx
+++ b/pages/start/mainnet.mdx
@@ -3,9 +3,9 @@
 > This is the mainnet version of Loot Survivor. It costs 25 LORDS per game (or a daily game using a Golden Token) and requires ETH for gas fees. If you are starting out we highly suggest you practice on [testnet](/start/testnet) for free.
 
 - On mainnet
-- Free to play
 - 25 LORDS per game
 - Full bot protection: wait to start
+- Gas paid in ETH
 - Eligible for tournament prizes, LORDS rewards and collectible beasts
 
 ___
