--- a/pages/beasts/beasts.mdx
+++ b/pages/beasts/beasts.mdx
@@ -13,6 +13,16 @@ When exploring you may get ambushed by a beast!
 **Tip:**
 Upgrade Wisdom to avoid ambushes
 
+## Efficacies
+
+> Weak/Fair/Strong gives 50%/100%/150% damage to certain Armor Type.
+
+| Weapon vs Armor | Metal  | Hide   | Cloth  |
+| --------------- | ------ | ------ | ------ |
+| `Blade`         | Weak   | Fair   | Strong |
+| `Bludgeon`      | Fair   | Strong | Weak   |
+| `Magic`         | Strong | Weak   | Fair   |
+
 ## Base Damage Calculation
 
 Beast base attack damage is:
