--- a/pages/stats/damagelist.mdx
+++ b/pages/stats/damagelist.mdx
@@ -20,4 +20,4 @@ If your attack is less than the beast armor then a minimum damage of 4 will be a
 
 ## Critical hits
 
-At Greatness 20, you may come across a beast with a name prefix such as "Whisper Glow", if this name prefix matches any of your item prefixes it can achieve critical hits. Critical hits provide a 4-7x damage increase. The maximum critical hit chance provided by Luck is, 100% Critical Hit == 100 Luck.
+Critical hits which provides a 20-100% damage bonus. At Greatness 20, you may come across a beast with a name prefix such as "Whisper Glow", if this name prefix matches any of your item name prefixes it can achieve critical hits. Critical hits from name boosts provide a 4-7x damage increase. The maximum critical hit chance provided by Luck is, 100% Critical Hit == 100 Luck.
