--- a/pages/start/arcadeaccounts.mdx
+++ b/pages/start/arcadeaccounts.mdx
@@ -1,8 +1,37 @@
 # Arcade Accounts
 
-Arcade Accounts are "burner" accounts that can interacts, with certain permissions, in a contracts.
+Arcade Accounts (AA) are "burner" accounts that provide signature free gameplay.
 
-The permissions given to the arcade account can only do limited actions for security, these include, interacting with the game functions (attack, flee, explore etc.) and transfers to a "master" account.
-The "master" account is the account that created the Arcade Account (AA). It works by using native storing the keys in the browser.
+## How does it work?
 
-Arcade Accounts are **free** to create however it will initiate a transfer of 0.01 ETH from your connected wallet to the AA to cover your transaction costs (gas) from normal gameplay.
+The Arcade Account or AA, is deployed by the main account and can only perform certain actions.It works by deploying a pre-funded account amount (0.01 ETH & 25 LORDS) from your main account to your AA and stores the keys in the browser. Arcade accounts are less secure than using your main wallet however, you can help keep it secure by changing your keys.
+
+## How can I see my keys?
+
+To get your public and private key, follow the below steps. You can also set new keys to your AA.
+
+- Right-click in the browser and click inspect
+- At the header bar (Elements, console etc.), click Application
+- On the application tab click Storage -> Local storage (dropdown) then the URL
+- Your keys will be shown on the right
+
+## How can I change my keys?
+
+Changing keys helps to keep arcade accounts secure, change your keys at any time in the AA menu. Ensure you are connected to your main account before changing the keys.
+
+[Arcade Account](/AA.png)
+
+## My account has deployed but I am getting an error...
+
+On occassion, your account can deploy but the permissions might not be set. To do set the permissions if you are trying to deplo an AA, you can do the following:
+
+- Go to AA's then Set Permissions
+- Sign the transactionfrom your main account and voila!
+
+## My AA has not deployed correctly and I can't see it in my aracde accounts
+
+To recover your account you can:
+
+- Get your AA address from your wallet (check the deploy account transaction)
+- Go to AA's then Recover Account
+- Enter your address and recover account
