--- a/pages/start/arcadeaccounts.mdx
+++ b/pages/start/arcadeaccounts.mdx
@@ -28,10 +28,10 @@ On occassion, your account can deploy but the permissions might not be set. To d
 - Go to AA's then Set Permissions
 - Sign the transactionfrom your main account and voila!
 
-## My AA has not deployed correctly and I can't see it in my aracde accounts
+## My AA has not deployed correctly and I can't see it in my arcade accounts
 
-To recover your account you can:
+To recover your undeployed account you can:
 
-- Get your AA address from your wallet (check the deploy account transaction)
-- Go to AA's then Recover Account
-- Enter your address and recover account
+- Get your AA address from your wallet or browser
+- Go to AA in Loot Survivor then Recover Undeployed Account
+- Enter your address and recover
