- modify content - add lords cost fetcher

--- a/pages/start/arcade-accounts/deployment-flow.mdx
+++ b/pages/start/arcade-accounts/deployment-flow.mdx
@@ -1,2 +1,10 @@
 # Account Deployment Flow
 
+When a new player enters the game for the first time they will be given steps to follow to setup their Arcade Account.
+
+The steps are as follows:
+
+- Connect wallet (Or download one if they don't currently have)
+- Get ETH (**Mainnet**: Option to bridge, **Testnet**: Link to faucet)
+- Get LORDS (**Mainnet**: Link to DEX, **Testnet**: Button to Mint)
+- Deploy Arcade Account
