--- a/pages/start/arcade-accounts/key-storage.mdx
+++ b/pages/start/arcade-accounts/key-storage.mdx
@@ -1,6 +1,6 @@
 # Key Storage
 
-## Check your keys
+## How can I see my keys?
 
 Arcade Account keys are stored in browser local storage and can be checked at any point.
 
@@ -16,10 +16,10 @@ Arcade Account keys are stored in browser local storage and can be checked at an
 
 <img src="/arcade-accounts/burners-tab.png" alt="Burners Tab" style={{ height: "500px", width: "500px" }} />
 
-## Key Rotation
+## How can I change my keys?
 
 Loot Survivor also supports key rotations, meaning if you feel that your private key may have been exposed you can generate a new one.
 
 To create a new key for your Arcade Account there is an option in the Arcade Accounts screen in Loot Survivor, you must be connected to the master account:
 
-<img src="/arcade-accounts/gen-key.png" alt="Burners Tab" style={{ height: "500px", width: "650px" }} />
+<img src="/AA.png" alt="Burners Tab" style={{ height: "400px", width: "750px" }} />
