--- a/pages/start/mainnet.mdx
+++ b/pages/start/mainnet.mdx
@@ -1,9 +1,10 @@
+import {MainnetGamePrice} from "../../components/fetchGamePrice"
+
 # Getting Started On Mainnet
 
-> This is the mainnet version of Loot Survivor. It costs 25 LORDS per game (or a daily game using a Golden Token) and requires ETH for gas fees. If you are starting out we highly suggest you practice on [testnet](/start/testnet) for free.
+> This is the mainnet version of Loot Survivor. It costs <MainnetGamePrice /> per game (or a daily game using a Golden Token) and requires ETH for gas fees. If you are starting out we highly suggest you practice on [testnet](/start/testnet) for free.
 
-- On mainnet
-- 25 LORDS per game
+- <MainnetGamePrice /> per game
 - Full bot protection: wait to start
 - Gas paid in ETH
 - Eligible for tournament prizes, LORDS rewards and collectible beasts
@@ -12,7 +13,7 @@ ___
 
 Step 1: Get a Starknet Wallet. Download [ArgentX](https://www.argent.xyz/argent-x/) or [Braavos](https://braavos.app/).
 
-Step 2: Ensure you have at least 25 LORDS and 0.01 ETH in your wallet. 
+Step 2: Ensure you have at least <MainnetGamePrice /> and 0.01 ETH in your wallet. 
 - [Bridge LORDS from ETH to Starknet](https://realms.world/bridge) or [Buy LORDS on Starknet](https://app.avnu.fi/en?tokenFrom=0x49d36570d4e46f48e99674bd3fcc84644ddd6b96f7c741b1562b82f9e004dc7&tokenTo=0x124aeb495b947201f5fac96fd1138e326ad86195b98df6dec9009158a533b49&amount=0.001)
 - [Bridge ETH to Starknet](https://starkgate.starknet.io/)
 
@@ -23,7 +24,7 @@ Step 4: Head to [Loot Survivor (mainnet)](https://survivor.realms.world/)
 Step 5: Connect your wallet
 
 Step 6: Create an [Arcade Account](/start/arcadeaccounts)
-- Initiates a transfer of 0.01 ETH from your connected account to cover gas from gameplay
+- Initiates a transfer of 0.01 ETH to cover gas and a custom amount of LORDS based on the number of games you want to prefund with
 - Initiates three contract approvals
 
 > **Do not refresh or close the browser while these transactions are processing as it could lead to the loss of your funds**
@@ -32,10 +33,10 @@ Step 7: Connect your new Arcade Account
 
 Step 8: Choose your weapon and name your Adventurer
 
-Step 9: Press 'PLAY WITH LORDS TOKENS' which will spend 25 LORDS
+Step 9: Press 'PLAY WITH LORDS TOKENS' which will spend <MainnetGamePrice /> LORDS
 
 Step 10: Wait for the countdown for your game to begin (~5 but varies mins)
 
-> **We recommend setting a timer on your phone to ensure you don't miss your game and lose your 25 LORDS**
+> **We recommend setting a timer on your phone to ensure you don't miss your game and lose your LORDS**
 
 Step 11: Play
