--- a/pages/start/testnet.mdx
+++ b/pages/start/testnet.mdx
@@ -1,9 +1,10 @@
+import {TestnetGamePrice} from "../../components/fetchGamePrice"
+
 # Getting Started On Testnet
 
 > Testnet Loot Survivor is the perfect place to practice and hone your skills without spending any LORDS or ETH on gas before playing on mainnet. 
 
-- On testnet
-- Free to play
+- Free to play (testnet funds)
 - Bot protection removed: instant start
 - Gas paid in goerli eth
 - Not eligible for tournament prizes, LORDS rewards for top three places or collectible beasts
@@ -20,14 +21,16 @@ Step 4: Head to [Loot Survivor (testnet)](https://goerli-survivor.realms.world/)
 
 Step 5: Connect your wallet
 
-Step 6: Create an [Arcade Account](/start/arcadeaccounts)
-- Initiates a transfer of 0.01 goerli ETH from your connected account to cover gas from gameplay
+Step 6: Mint Lords. You can either mint as part of the onboarding process (for players with no Arcade Account) or by minting in the game header.
+
+Step 7: Create an [Arcade Account](/start/arcadeaccounts)
+- Initiates a transfer of 0.01 goerli ETH and a custom amount of LORDS based on the number of games you want to prefund with
 - Initiates three contract approvals
 
-Step 7: Connect your new Arcade Account
+Step 8: Connect your new Arcade Account
 
-Step 8: Choose your weapon and name your Adventurer
+Step 9: Choose your weapon and name your Adventurer
 
-Step 9: Press 'PLAY WITH LORDS TOKENS' (these are test LORDS)
+Step 10: Press 'PLAY WITH LORDS TOKENS' (these are test LORDS)
 
-Step 6: Play
+Step 11: Play
