--- a/pages/start/arcade-accounts/overview.mdx
+++ b/pages/start/arcade-accounts/overview.mdx
@@ -6,7 +6,8 @@
 
 Arcade Accounts are "burner" accounts that can only execute transactions with a predefined list of permissions.
 
-The permissions given to the arcade account can only do limited actions for security, these include, interacting with the game functions (attack, flee, explore etc.) and transfers to a "master" account.
-The "master" account is the account that created the Arcade Account (AA). AA's are controlled by the player by storing the keys in the browser.
+## How does it work?
+
+The Arcade Account or AA, is deployed by the main account and can only perform certain actions. It works by deploying a pre-funded account amount (0.01 ETH & Game Price * X games to play in LORDS) from your main account to your AA and stores the keys in the browser. Keeping keys in the browser less secure, however, through limitting txs by permissions there is low impact from exploitation.
 
 Arcade Accounts are **free** to create however it will initiate a transfer of 0.001 ETH from your connected wallet to the AA to cover your transaction costs (gas) from normal gameplay.
