--- a/pages/start/arcade-accounts/deployment-flow.mdx
+++ b/pages/start/arcade-accounts/deployment-flow.mdx
@@ -1,3 +1,5 @@
+import Image from 'next/image'
+
 # Account Deployment Flow
 
 When a new player enters the game for the first time they will be given steps to follow to setup their Arcade Account.
@@ -8,3 +10,5 @@ The steps are as follows:
 - Get ETH (**Mainnet**: Option to bridge, **Testnet**: Link to faucet)
 - Get LORDS (**Mainnet**: Link to DEX, **Testnet**: Button to Mint)
 - Deploy Arcade Account
+
+<Image src="/onboarding.png" alt="Onboarding" height={400} width={750} />
