--- a/pages/start/arcade-accounts/key-storage.mdx
+++ b/pages/start/arcade-accounts/key-storage.mdx
@@ -1,3 +1,5 @@
+import Image from 'next/image'
+
 # Key Storage
 
 ## How can I see my keys?
@@ -6,15 +8,15 @@ Arcade Account keys are stored in browser local storage and can be checked at an
 
 1. Right click anywhere in the UI and click "Inspect":
 
-<img src="/arcade-accounts/inspect-tab.png" alt="Inspect Tab" />
+<Image src="/arcade-accounts/keys/inspect-tab.png" alt="Inspect Tab" width={800} height={800} />
 
 2. Click the double arrow in the top right and click "Application":
 
-<img src="/arcade-accounts/application-tab.png" alt="Application Tab" style={{ height: "500px", width: "500px" }} />
+<Image src="/arcade-accounts/keys/application-tab.png" alt="Application Tab" width={800} height={800} />
 
 3. Within "Application" navigate under "Storage". Click on "Local Storage" -> Select the url. You will then find the accounts under burner with all the sensitive key info:
 
-<img src="/arcade-accounts/burners-tab.png" alt="Burners Tab" style={{ height: "500px", width: "500px" }} />
+<Image src="/arcade-accounts/keys/burners-tab.png" alt="Burners Tab" width={800} height={800} />
 
 ## How can I change my keys?
 
@@ -22,4 +24,4 @@ Loot Survivor also supports key rotations, meaning if you feel that your private
 
 To create a new key for your Arcade Account there is an option in the Arcade Accounts screen in Loot Survivor, you must be connected to the master account:
 
-<img src="/AA.png" alt="Burners Tab" style={{ height: "400px", width: "750px" }} />
+<Image src="/arcade-accounts/account-tab.png" alt="Arcade Account Tab Tab" width={800} height={800} />
