--- a/pages/start/arcade-accounts/overview.mdx
+++ b/pages/start/arcade-accounts/overview.mdx
@@ -1,7 +1,9 @@
+import Image from 'next/image'
+
 # Arcade Accounts
 
 <div style={{ display: 'flex', justifyContent: 'center' }}>
-    <img src="/arcade-account.png" alt="Arcade Account" style={{ height: "300px", width: "300px" }} />
+    <Image src="/arcade-accounts/arcade-image.png" alt="Arcade Account" height={300} width={300} />
 </div>
 
 Arcade Accounts are "burner" accounts that can only execute transactions with a predefined list of permissions.
