add alternative clients

--- a/pages/start/mainnet.mdx
+++ b/pages/start/mainnet.mdx
@@ -1,4 +1,5 @@
 import {MainnetGamePrice} from "../../components/fetchGamePrice"
+import Link from 'next/link';
 
 # Getting Started On Mainnet
 
@@ -11,31 +12,32 @@ import {MainnetGamePrice} from "../../components/fetchGamePrice"
 
 ___
 
-Step 1: Get a Starknet Wallet. Download [ArgentX](https://www.argent.xyz/argent-x/) or [Braavos](https://braavos.app/).
+1. Get a Starknet Wallet. Download [ArgentX](https://www.argent.xyz/argent-x/) or [Braavos](https://braavos.app/).
 
-Step 2: Ensure you have at least <MainnetGamePrice /> and 0.01 ETH in your wallet. 
-- [Bridge LORDS from ETH to Starknet](https://realms.world/bridge) or [Buy LORDS on Starknet](https://app.avnu.fi/en?tokenFrom=0x49d36570d4e46f48e99674bd3fcc84644ddd6b96f7c741b1562b82f9e004dc7&tokenTo=0x124aeb495b947201f5fac96fd1138e326ad86195b98df6dec9009158a533b49&amount=0.001)
-- [Bridge ETH to Starknet](https://starkgate.starknet.io/)
+2. Ensure you have at least <MainnetGamePrice /> and 0.01 ETH in your wallet. 
+    - [Bridge LORDS from ETH to Starknet](https://realms.world/bridge) or [Buy LORDS on Starknet](https://app.avnu.fi/en?tokenFrom=0x49d36570d4e46f48e99674bd3fcc84644ddd6b96f7c741b1562b82f9e004dc7&tokenTo=0x124aeb495b947201f5fac96fd1138e326ad86195b98df6dec9009158a533b49&amount=0.001)
+    - [Bridge ETH to Starknet](https://starkgate.starknet.io/)
 
-Step 3: Ensure your Starknet wallet is on mainnet
+3. Ensure your Starknet wallet is on mainnet
 
-Step 4: Head to [Loot Survivor (mainnet)](https://survivor.realms.world/) 
+4. Head to [OG client](https://survivor.realms.world/) or any of the <Link href="/clients" style={{color: '#32CD32', textDecoration: 'underline'}}>Alternative Clients</Link>
 
-Step 5: Connect your wallet
 
-Step 6: Create an [Arcade Account](/start/arcadeaccounts)
-- Initiates a transfer of 0.01 ETH to cover gas and a custom amount of LORDS based on the number of games you want to prefund with
-- Initiates three contract approvals
+5. Connect your wallet
 
-> **Do not refresh or close the browser while these transactions are processing as it could lead to the loss of your funds**
+6. Create an [Arcade Account](/start/arcadeaccounts)
+    - Initiates a transfer of 0.01 ETH to cover gas and a custom amount of LORDS based on the number of games you want to prefund with
+    - Initiates three contract approvals
 
-Step 7: Connect your new Arcade Account
+    > **Do not refresh or close the browser while these transactions are processing as it could lead to the loss of your funds**
 
-Step 8: Choose your weapon and name your Adventurer
+7. Connect your new Arcade Account
 
-Step 9: Press 'PLAY WITH LORDS TOKENS' which will spend <MainnetGamePrice /> LORDS
+8. Choose your weapon and name your Adventurer
 
-Step 10: Wait for the countdown for your game to begin (~5 but varies mins)
+9. Press 'PLAY WITH LORDS TOKENS' which will spend <MainnetGamePrice /> LORDS
+
+10. Wait for the countdown for your game to begin (~5 but varies mins)
 
 > **We recommend setting a timer on your phone to ensure you don't miss your game and lose your LORDS**
 
