--- a/pages/start/mainnet.mdx
+++ b/pages/start/mainnet.mdx
@@ -25,7 +25,7 @@ ___
 
 5. Connect your wallet
 
-6. Create an [Arcade Account](/start/arcadeaccounts)
+6. Create an [Arcade Account](/start/arcade-accounts/overview)
     - Initiates a transfer of 0.01 ETH to cover gas and a custom amount of LORDS based on the number of games you want to prefund with
     - Initiates three contract approvals
 
