--- a/pages/start/testnet.mdx
+++ b/pages/start/testnet.mdx
@@ -23,7 +23,7 @@ ___
 
 6. Mint Lords. You can either mint as part of the onboarding process (for players with no Arcade Account) or by minting in the game header.
 
-7. Create an [Arcade Account](/start/arcadeaccounts)
+7. Create an [Arcade Account](/start/arcade-accounts/overview)
     - Initiates a transfer of 0.01 goerli ETH and a custom amount of LORDS based on the number of games you want to prefund with
     - Initiates three contract approvals
 
