update for LS 1.5

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,13 +1,17 @@
-# Loot Survivor
+![Banner](/Banner.png)
 
-A roguelike, survival fully onchain game built on Starknet.
+Loot Survivor V1.5 is a fully onchain, rogue-like, arcade dungeon crawler. Explore the endless dynamically generated dungeons filled with beasts, obstacles, and loot while you fight for your life in pursuit of the esteemed leaderboard.
 
-Built by Bibliotheca DAO contributors and [@LootRealms](https://twitter.com/LootRealms) community.
+Built by Provable Games [@provablegames](https://twitter.com/provablegames) in alliance with Bibliotheca DAO and [@LootRealms](https://twitter.com/LootRealms) community.
 
-## What is Loot Survivor?
+## Why should I play?
 
 Loot Survivor is an onchain arcade machine, you put in a small amount of $LORDS, play and try to top the immutable leaderboard.
 
+The game has a built in reward model that pays the top 3 players based on the total amount of $LORDS put into the game. As you play you will also encounter 1:1 collectible beasts that you can trade with other players, these will have utility in the upcoming game Loot Survivor 2.
+
 ## Play Loot Survivor
 
-<a href="https://survivor.realms.world/">![Loot Survivor](/beast.png)</a>
+[Sepolia Tournament](https://sepolia.lootsurvivor.io/)
+
+[Mainnet](https://lootsurvivor.io/)
