--- a/pages/items/Potions/potion.mdx
+++ b/pages/items/Potions/potion.mdx
@@ -4,6 +4,6 @@ Running low on health again? 😭
 
 Buy potions with gold to replenish your health.
 
-Potions are not a fixed cost and increase as you progress. Each potion provides 10HP. Charisma potion discount is 2 gold per stat.
+Cost of potions scales with adventurers level minus 2 gold per Charisma. Each potion adds 10HP to Health.
 
-> Potions cost `(3 * adventurer_level) - charisma_potion_discount`
+> Potions cost `adventurer_level - (2 * charisma)`
