--- a/pages/items/items.mdx
+++ b/pages/items/items.mdx
@@ -4,7 +4,7 @@ There are **101** Loot Items for **Weapons** and **Armor** their efficacies are 
 
 > Weak/Fair/Strong gives 50%/100%/150% damage to certain Armor Type.
 
-| Weapon vs Armor | Metal  | Hide   | Cloth  |
+| Weapon vs Armor | `Metal`  | `Hide`   | `Cloth`  |
 | --------------- | ------ | ------ | ------ |
 | `Blade`         | Weak   | Fair   | Strong |
 | `Bludgeon`      | Fair   | Strong | Weak   |
