--- a/pages/start/testnet.mdx
+++ b/pages/start/testnet.mdx
@@ -2,35 +2,14 @@ import {TestnetGamePrice} from "../../components/fetchGamePrice"
 
 # Getting Started On Testnet
 
-> Testnet Loot Survivor is the perfect place to practice and hone your skills without spending any LORDS or ETH on gas before playing on mainnet. 
+> Testnet Loot Survivor is the perfect place to practice and hone your skills without spending any LORDS or ETH on gas before playing on Mainnet. 
 
-- Free to play (testnet funds)
-- Bot protection removed: instant start
-- Gas paid in goerli eth
-- Not eligible for tournament prizes, LORDS rewards for top three places or collectible beasts
+- Free to play
+- No player rewards
+- No collectible NFTs
+- Psuedo-randomness
+- Leaderboard may be periodically reset
 
 ___
 
-1. Get a Starknet Wallet. Download [ArgentX](https://www.argent.xyz/argent-x/) or [Braavos](https://braavos.app/).
-
-2. Get some goerli eth from the [Starknet faucet](https://faucet.goerli.starknet.io/) (or ask in #⁠survivor-chat in discord)
-
-3. Change your wallet network to testnet
-
-4. Head to [Loot Survivor (testnet)](https://goerli-survivor.realms.world/) 
-
-5. Connect your wallet
-
-6. Mint Lords. You can either mint as part of the onboarding process (for players with no Arcade Account) or by minting in the game header.
-
-7. Create an [Arcade Account](/start/arcade-accounts/overview)
-    - Initiates a transfer of 0.01 goerli ETH and a custom amount of LORDS based on the number of games you want to prefund with
-    - Initiates three contract approvals
-
-8. Connect your new Arcade Account
-
-9. Choose your weapon and name your Adventurer
-
-10. Press 'PLAY WITH LORDS TOKENS' (these are test LORDS)
-
-11. Play
+Getting started on Testnet is as easy as just clicking "Play on Testnet" in the intro. (A browser wallet is deployed with keys stored in the background)
