--- a/pages/beasts/beasts.mdx
+++ b/pages/beasts/beasts.mdx
@@ -1,24 +1,28 @@
-# Beasts
+import Link from 'next/link';
 
-When exploring you may get ambushed by a beast!
+<div style={{ width: '100%', height: '300px', overflow: 'hidden', display: 'flex', justifyContent: 'center', alignItems: 'center' }}>
+  <img src="/beasts/beasts.png" alt="Beasts" style={{ width: '100%', height: 'auto', objectFit: 'cover', objectPosition: 'center' }} />
+</div>
+
+
+## Meet the Beasts
 
 💀 There are 75 beasts in Loot Survivor
 
-💀 Beasts attack the Head, Chest, Hands, Waist and Feet
-
 💀 Beast have dynamic health and attack locations
 
-💀 Greatness 19+ beasts unlock special name prefixes
+💀 When discovering a beast you will be locked in a battle. You have 2 options, fight or flee
 
-**Tip:**
-Upgrade Wisdom to avoid ambushes
+💀 Beasts have a chance to ambush upon discovering them. There ambushes and attacks will attack a random armor slot of your adventurer
 
-### Beast Attack
+💀 Greatness 19+ beasts unlock special name prefixes and are collectible
+
+### Beast Types
 
 There are 3 Beast types; Magical, Hunter and Brute. Each with their suited weapon and armor.
 
 | Beast     | Weapon   | Armor |
 | --------- | -------- | ----- |
-| `Magical` | Magic    | Cloth |
-| `Hunter`  | Blade    | Hide  |
-| `Brute`   | Bludgeon | Metal |
+| <Link href="/beasts/types/magical">`Magical`</Link> | Magic    | Cloth |
+| <Link href="/beasts/types/hunter">`Hunter`</Link>  | Blade    | Hide  |
+| <Link href="/beasts/types/brute">`Brute`</Link>   | Bludgeon | Metal |
