--- a/pages/stats/stats-list.mdx
+++ b/pages/stats/stats-list.mdx
@@ -2,15 +2,15 @@
 
 Each level up grants adventurers a +1 stat boost to help them survive their explorations. Whilst you cannot upgrade Luck, you can increase it by equipping jewelry items.
 
-| Attribute    | Type            | Description                                                       |
-| ------------ | --------------- | ----------------------------------------------------------------- |
-| Strength     | 3D Physical     | Boosts attack damage by 10%                                       |
-| Vitality     | 3D Physical     | Increases max health and current by +10HP                         |
-| Dexterity    | 3D Physical     | Improves chances of successfully fleeing                          |
-| Intelligence | 3D Mental       | Aids in avoiding obstacles                                        |
-| Wisdom       | 3D Mental       | Helps evade beast ambushes                                        |
-| Charisma     | 3D Mental       | Gives gold discount on items and health potions                   |
-| Luck         | 1D Metaphysical | Raises chances of critical damage and cannot be upgraded directly |
+| Attribute    | Type         | Description                                                       |
+| ------------ | -------------| ----------------------------------------------------------------- |
+| Strength     | Physical     | Boosts attack damage by 10%                                       |
+| Vitality     | Physical     | Increases max health and current by +15HP                         |
+| Dexterity    | Physical     | Improves chances of successfully fleeing                          |
+| Intelligence | Mental       | Aids in avoiding obstacles                                        |
+| Wisdom       | Mental       | Helps evade beast ambushes                                        |
+| Charisma     | Mental       | Gives gold discount on items and health potions                   |
+| Luck         | Metaphysical | Raises chances of critical damage and cannot be upgraded directly |
 
-> To calculate the odds of your stats simply do:
+> Calculating the odds of successful outcomes from fleeing, avoiding obstacles and evading ambushes follow the same probablity formula:
 > `Stat / Level`
