--- a/pages/items/items.mdx
+++ b/pages/items/items.mdx
@@ -1,6 +1,6 @@
 # Loot Items
 
-There are **101** Loot Items for **Weapons** and **Armor** their efficacies are shown below. Tier 1 items offer the highest level of attack and defense.
+There are **101** Loot Items for **Weapons** and **Armor** their elemental adjustments are shown below. Tier 1 items offer the highest level of attack and defense.
 
 > Weak/Fair/Strong gives 50%/100%/150% damage to certain Armor Type.
 
@@ -9,6 +9,3 @@ There are **101** Loot Items for **Weapons** and **Armor** their efficacies are 
 | `Blade`         | Weak   | Fair   | Strong |
 | `Bludgeon`      | Fair   | Strong | Weak   |
 | `Magic`         | Strong | Weak   | Fair   |
-
-Adventurers can only carry 19 items in their bags. Items can be dropped and swapped from the item card.
-If you drop an item you will lose the associated boosts.
